[package]
name = "internet-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.197"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
